# Module.Svg

./: CMakeLists.txt  README.md
.github/workflows/: autobuild.yml  build-linux.yml
CMake/: Configure.cmake
Svg/: CMakeLists.txt  Context.cpp  Context.h  Definitions.h  Style.cpp  Style.h  Writers.h
Test/: CMakeLists.txt  Test1.cpp
